--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./**/*.test.js",
+    "test:watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
   },
   "homepage": "https://github.com/anya92/data-structures-and-algorithms-js#readme",
   "dependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
     "performance-now": "^2.1.0"
   }
 }
